Bug 865546 - Propagate FLAG_CLAMP through RasterImage::DrawWithPreDownscaleIfNeeded. r=joedrew